# Spritoglobin

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  spritoglobin.nuitka-package.config.yml
.github/workflows/: build.yml
main/: classes.py  data_scripts.py  main.py  ui_scripts.py
spritoglobin/: __init__.py  __main__.py  classes.py  data_scripts.py  import_files.py  main.py  ui_scripts.py  utils.py
